deploy: 6d236cf33af35f7c9f428a76c6c10cad80173b76

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/ngspiceX/vite.svg" />
+  <link rel="icon" type="image/png" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
@@ -25,7 +25,7 @@
     property="og:description"
     content="SPICE circuit simulation directly in the browser using ngspice compiled to WebAssembly. Includes support for transient, AC, DC, noise, distortion, sensitivity, pole-zero, and S-parameter analyses."
   />
-  <meta property="og:image" content="https://raw.githubusercontent.com/shishir-dey/ngspiceX/main/preview.png" />
+  <meta property="og:image" content="./ngspiceX.png" />
   <meta property="og:site_name" content="ngspiceX" />
   <meta property="og:locale" content="en_US" />
 
@@ -37,7 +37,7 @@
     name="twitter:description"
     content="Client-side SPICE simulator built with ngspice and WebAssembly. Supports multiple analysis types including transient, AC, DC, and advanced simulations."
   />
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/shishir-dey/ngspiceX/main/preview.png" />
+  <meta name="twitter:image" content="./ngspiceX.png" />
   <meta name="twitter:creator" content="@shishirdey" />
 
   <!-- Structured Data (Schema.org) -->
@@ -54,6 +54,7 @@
         "@type": "Person",
         "name": "Shishir Dey"
       },
+      "image": "./ngspiceX.png",
       "url": "https://github.com/shishir-dey/ngspiceX",
       "license": "https://opensource.org/licenses/MIT",
       "offers": {
